# banking-simulator

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  index.css  theme.tsx
dashboard/src/api/: client.ts  types.ts
dashboard/src/components/: AccountsTable.tsx  HistoryChart.tsx  OperationPanel.tsx  TopSpendersChart.tsx
dashboard/src/hooks/: useBanking.ts
src/banking/: __init__.py  accounts.py  cashbacks.py  engine.py  ledger.py
src/banking/api/: main.py  routes.py  schemas.py  views.py
tests/: test_api.py  test_engine.py
